# cppcraft

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  ZuneCraft.sln  ZuneCraftVS2022.sln
.cache/clangd/index/: AABB.cpp.D187A3638F065567.idx  AABB.h.248CF1EC5EDBEF26.idx  Asset.cpp.9E1B4BE50E69DABA.idx  Asset.h.E688C3BE902D0514.idx  Base.h.A24BFA551D6015B7.idx  Camera.cpp.10EDF35F5324F679.idx  Camera.h.E3C8F63AB750E8B6.idx  Chunk.cpp.EC3536F0826C1980.idx  Chunk.h.10A6A4FDA28CB00C.idx  Convert.h.45DA96C4EF624ADC.idx  DeviceResources.h.B51BEBF649B02F7C.idx  Entity.h.6EF8DD97521A933B.idx  EntryPoint.cpp.5E1BDF2B5D5AE00E.idx  Event.h.5D3428E65CE7BFE7.idx  FastNoiseLite.h.3E152D6F2244D41F.idx  GL.h.159FAD8FF68061AD.idx  GLAPI.cpp.FA55D7725EC9F6F3.idx  GLAPI.h.880B3721F9D04D50.idx  GLCommandQueue.cpp.EBFE576FA3D2C42C.idx  GLCommandQueue.h.2E69770419D73F53.idx  GLRenderTarget.cpp.07C4F49F6EF589DD.idx  GLRenderTarget.h.F2A3F010ADB3F5D3.idx  GLShader.cpp.A5465FBDCD9770CA.idx  GLShader.h.86A907B4DA6015B5.idx  GLStorage.cpp.7447D4F3DD511F71.idx  GLStorage.h.9F03250214E41B7E.idx  GLTexture.cpp.332BC901559B2844.idx  GLTexture.h.1D04369F227A7972.idx  GLVertexLayout.cpp.8255FDBCA84A0FEB.idx  GLVertexLayout.h.A26669DE55974EE2.idx  GLWindow.cpp.C96E75311AB71F34.idx  GLWindow.h.87BAF86EC1930B9E.idx  Game.cpp.21319F8F8A4FFE31.idx  Game.h.F6F42672EB743D2E.idx  (+235 more)
Launcher/: Launcher.csproj  Launcher.csproj.Release.cachefile  Program.cs
Launcher/Content/: Content.contentproj
Launcher/Properties/: AssemblyInfo.cs
ZuneCraft/: CMakeLists.txt  ZuneCraft.vcproj  ZuneCraftVS2022.vcxproj
ext/glm/: manual.md
src/Core/: Base.h  EntryPoint.cpp  GLWindow.cpp  GLWindow.h  Game.cpp  Game.h  Input.h  Logger.h  Service.cpp  Service.h
src/Data/: Event.h  Handle.cpp  Handle.h  HandleStore.h
src/Graphics/: Camera.cpp  Camera.h  DeviceResources.h  Pipeline.cpp  Pipeline.h  RenderAPI.cpp  RenderAPI.h  Renderer.cpp  Renderer.h  Vertex.cpp  Vertex.h  VertexPool.cpp  VertexPool.h
src/Threading/: Mutex.cpp  Mutex.h  Signal.cpp  Signal.h  ThreadPool.cpp  ThreadPool.h
src/Utility/: Asset.cpp  Asset.h  Convert.h
src/World/: AABB.cpp  AABB.h  Chunk.cpp  Chunk.h  Entity.h  Material.h  Player.cpp  Player.h  World.cpp  World.h
(+152 files in other folders)
